<resources>
    <string name="app_name">Music App</string>
    <string name="intro_main">This activity is the main screen of the music app. It shows a brief
        description of the app functionality and lists the available options: play music from a list
        of songs, artists, albums, playlists and genres.\n\nIt uses 1 vertical LinearLayout and 7
        TextViews. This activity has two different layouts, in order to show always the 6 options
        regardless the orientation of the display.</string>
    <string name="intro_row_list">This activity shows information about one artist, album, playlist,
        music genre or search result, and provides a list of songs related to the selected content.
        \n\nFrom here you may also search songs in your collection, buy music from the same artist,
        album or music genre, and play/stop any song in the list.</string>
    <string name="intro_column_list">This activity shows a list of albums, artists, genres or
        playlists from the music library of the user of this app. It should provide a way of sorting
        music elements by name, author, etc. At the bottom side, you can play/stop the currently
        selected song.\n\nFrom here you may also search songs in your collection and buy music
        online.</string>
    <string name="intro_now_playing">This activity shows data about the currently playing song, with
        controls for pause/play, previous/next song and like/dislike.</string>
    <string name="intro_search">This activity is used for searching music (by song name, album title,
        author, etc.) into the user\'s music database. It might produce some different results,
        grouped by category.</string>
    <string name="title_options_list">List</string>
    <string name="title_songs_list">Songs</string>
    <string name="title_now_playing">Now playing&#8230;</string>
    <string name="title_search">Search</string>
    <string name="category_artists">Artists</string>
    <string name="category_albums">Albums</string>
    <string name="category_songs">Songs</string>
    <string name="category_playlists">Playlists</string>
    <string name="category_genres">Genres</string>
    <string name="category_search">Search</string>
    <string name="pause_music">Pause music</string>
    <string name="play_music">Play music</string>
    <string name="number_of_albums">Albums</string>
    <string name="number_of_songs">Songs</string>
    <string name="buy_music">Go to the online music store</string>
    <string name="previous_song">Skip to the previous song</string>
    <string name="next_song">Skip to the next song</string>
    <string name="like_song">I like this song</string>
    <string name="dislike_song">I don\'t like this song</string>
    <string name="search_hint">Search for music</string>
    <string name="search_background_description">Search screen background image</string>
    <string name="now_playing_image_description">Cover for the now playing song</string>
    <string name="now_playing_button_description">Play/stop the now playing song</string>
    <string name="genre_1_id">1</string>
    <string name="genre_1_name">Rock</string>
    <string name="genre_1_image">genre_1</string>
    <string name="genre_2_id">2</string>
    <string name="genre_2_name">Heavy Rock</string>
    <string name="genre_2_image">genre_2</string>
    <string name="genre_3_id">3</string>
    <string name="genre_3_name">Pop</string>
    <string name="genre_3_image">genre_3</string>
    <string name="genre_4_id">4</string>
    <string name="genre_4_name">Progressive Rock</string>
    <string name="genre_4_image">genre_4</string>
    <string name="genre_5_id">5</string>
    <string name="genre_5_name">Operatic pop</string>
    <string name="genre_5_image">genre_5</string>
    <string name="author_1_id">1</string>
    <string name="author_1_name">Queen</string>
    <string name="author_1_image">author_1</string>
    <string name="author_2_id">2</string>
    <string name="author_2_name">Guns N\' Roses</string>
    <string name="author_2_image">author_2</string>
    <string name="author_3_id">3</string>
    <string name="author_3_name">Loquillo y Trogloditas</string>
    <string name="author_3_image">author_3</string>
    <string name="author_4_id">4</string>
    <string name="author_4_name">Andrea Bocelli</string>
    <string name="author_4_image">author_4</string>
    <string name="author_5_id">5</string>
    <string name="author_5_name">Alaska y Dinarama</string>
    <string name="author_5_image">author_5</string>
    <string name="author_6_id">6</string>
    <string name="author_6_name">Scorpions</string>
    <string name="author_6_image">author_6</string>
    <string name="album_1_id">1</string>
    <string name="album_1_name">¡A por ellos&#8230;! que son pocos y cobardes</string>
    <string name="album_1_image">album_1</string>
    <string name="album_1_author_id">3</string>
    <string name="album_2_id">2</string>
    <string name="album_2_name">News of the World</string>
    <string name="album_2_image">album_2</string>
    <string name="album_2_author_id">1</string>
    <string name="album_3_id">3</string>
    <string name="album_3_name">Crazy World</string>
    <string name="album_3_image">album_3</string>
    <string name="album_3_author_id">6</string>
    <string name="album_4_id">4</string>
    <string name="album_4_name">Romanza</string>
    <string name="album_4_image">album_4</string>
    <string name="album_4_author_id">4</string>
    <string name="album_5_id">5</string>
    <string name="album_5_name">A Night at the Opera</string>
    <string name="album_5_image">album_5</string>
    <string name="album_5_author_id">1</string>
    <string name="album_6_id">6</string>
    <string name="album_6_name">Deseo carnal</string>
    <string name="album_6_image">album_6</string>
    <string name="album_6_author_id">5</string>
    <string name="album_7_id">7</string>
    <string name="album_7_name">Use Your Illusion I</string>
    <string name="album_7_image">album_7</string>
    <string name="album_7_author_id">2</string>
    <string name="song_1_id">1</string>
    <string name="song_1_name">Carne para Linda</string>
    <string name="song_1_album_id">1</string>
    <string name="song_1_genre_id">1</string>
    <string name="song_2_id">2</string>
    <string name="song_2_name">La policía</string>
    <string name="song_2_album_id">1</string>
    <string name="song_2_genre_id">1</string>
    <string name="song_3_id">3</string>
    <string name="song_3_name">Ya no puedo bailar</string>
    <string name="song_3_album_id">1</string>
    <string name="song_3_genre_id">1</string>
    <string name="song_4_id">4</string>
    <string name="song_4_name">Chanel, cocaína y Don Perignon</string>
    <string name="song_4_album_id">1</string>
    <string name="song_4_genre_id">1</string>
    <string name="song_5_id">5</string>
    <string name="song_5_name">Coleccionistas</string>
    <string name="song_5_album_id">1</string>
    <string name="song_5_genre_id">1</string>
    <string name="song_6_id">6</string>
    <string name="song_6_name">Piratas</string>
    <string name="song_6_album_id">1</string>
    <string name="song_6_genre_id">1</string>
    <string name="song_7_id">7</string>
    <string name="song_7_name">Quiero un camión</string>
    <string name="song_7_album_id">1</string>
    <string name="song_7_genre_id">1</string>
    <string name="song_8_id">8</string>
    <string name="song_8_name">Brisa de abril</string>
    <string name="song_8_album_id">1</string>
    <string name="song_8_genre_id">1</string>
    <string name="song_9_id">9</string>
    <string name="song_9_name">En Dino\'s a las diez</string>
    <string name="song_9_album_id">1</string>
    <string name="song_9_genre_id">1</string>
    <string name="song_10_id">10</string>
    <string name="song_10_name">Mis problemas con las mujeres</string>
    <string name="song_10_album_id">1</string>
    <string name="song_10_genre_id">1</string>
    <string name="song_11_id">11</string>
    <string name="song_11_name">La mala reputación</string>
    <string name="song_11_album_id">1</string>
    <string name="song_11_genre_id">1</string>
    <string name="song_12_id">12</string>
    <string name="song_12_name">La mataré</string>
    <string name="song_12_album_id">1</string>
    <string name="song_12_genre_id">1</string>
    <string name="song_13_id">13</string>
    <string name="song_13_name">Cadillac solitario</string>
    <string name="song_13_album_id">1</string>
    <string name="song_13_genre_id">1</string>
    <string name="song_14_id">14</string>
    <string name="song_14_name">Autopista</string>
    <string name="song_14_album_id">1</string>
    <string name="song_14_genre_id">1</string>
    <string name="song_15_id">15</string>
    <string name="song_15_name">Rock suave</string>
    <string name="song_15_album_id">1</string>
    <string name="song_15_genre_id">1</string>
    <string name="song_16_id">16</string>
    <string name="song_16_name">Todo el mundo ama a Isabel</string>
    <string name="song_16_album_id">1</string>
    <string name="song_16_genre_id">1</string>
    <string name="song_17_id">17</string>
    <string name="song_17_name">Besos robados</string>
    <string name="song_17_album_id">1</string>
    <string name="song_17_genre_id">1</string>
    <string name="song_18_id">18</string>
    <string name="song_18_name">El ritmo del garage</string>
    <string name="song_18_album_id">1</string>
    <string name="song_18_genre_id">1</string>
    <string name="song_19_id">19</string>
    <string name="song_19_name">El rompeolas</string>
    <string name="song_19_album_id">1</string>
    <string name="song_19_genre_id">1</string>
    <string name="song_20_id">20</string>
    <string name="song_20_name">Siempre libre</string>
    <string name="song_20_album_id">1</string>
    <string name="song_20_genre_id">1</string>
    <string name="song_21_id">21</string>
    <string name="song_21_name">En las calles de Madrid</string>
    <string name="song_21_album_id">1</string>
    <string name="song_21_genre_id">1</string>
    <string name="song_22_id">22</string>
    <string name="song_22_name">Esto no es Hawái</string>
    <string name="song_22_album_id">1</string>
    <string name="song_22_genre_id">1</string>
    <string name="song_23_id">23</string>
    <string name="song_23_name">Rock \'n\' Roll Star</string>
    <string name="song_23_album_id">1</string>
    <string name="song_23_genre_id">1</string>
    <string name="song_24_id">24</string>
    <string name="song_24_name">Barcelona ciudad</string>
    <string name="song_24_album_id">1</string>
    <string name="song_24_genre_id">1</string>
    <string name="song_25_id">25</string>
    <string name="song_25_name">We Will Rock You</string>
    <string name="song_25_album_id">2</string>
    <string name="song_25_genre_id">1</string>
    <string name="song_26_id">26</string>
    <string name="song_26_name">We Are the Champions</string>
    <string name="song_26_album_id">2</string>
    <string name="song_26_genre_id">1</string>
    <string name="song_27_id">27</string>
    <string name="song_27_name">Sheer Heart Attack</string>
    <string name="song_27_album_id">2</string>
    <string name="song_27_genre_id">1</string>
    <string name="song_28_id">28</string>
    <string name="song_28_name">All Dead, All Dead</string>
    <string name="song_28_album_id">2</string>
    <string name="song_28_genre_id">1</string>
    <string name="song_29_id">29</string>
    <string name="song_29_name">Spread Your Wings</string>
    <string name="song_29_album_id">2</string>
    <string name="song_29_genre_id">1</string>
    <string name="song_30_id">30</string>
    <string name="song_30_name">Fight From The Inside</string>
    <string name="song_30_album_id">2</string>
    <string name="song_30_genre_id">1</string>
    <string name="song_31_id">31</string>
</resources>