<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.david.musicapp.SearchActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:alpha="0.05"
        android:contentDescription="@string/search_background_description"
        android:src="@drawable/ic_search_black_48dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general_padding"
        android:hint="@string/search_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/general_padding"
        android:text="@string/intro_search" />

    <RelativeLayout
        android:id="@+id/search_now_playing"
        style="@style/NowPlayingLayout">

        <ImageView
            android:id="@+id/search_now_playing_image"
            style="@style/NowPlayingImage" />

        <LinearLayout
            style="@style/NowPlayingTitle"
            android:layout_toEndOf="@id/search_now_playing_image">

            <TextView
                android:id="@+id/search_now_playing_title"
                style="@style/ListElementTitle" />

            <TextView
                android:id="@+id/search_now_playing_subtitle"
                style="@style/ListElementSubtitle" />
        </LinearLayout>

        <ImageView
            android:id="@+id/search_now_playing_button"
            style="@style/NowPlayingButton"
            android:src="@drawable/ic_play_arrow_black_36dp" />
    </RelativeLayout>
</RelativeLayout>
